fix: font size, spacing

--- a/src/stylesheets/speakers.css
+++ b/src/stylesheets/speakers.css
@@ -196,7 +196,7 @@
 
 @media screen and (max-width: 600px) {
   .speakers h1 {
-    font-size: 250%;
+    font-size: 265%;
     letter-spacing: -2px;
   }
 }
