--- a/src/stylesheets/theme-section.css
+++ b/src/stylesheets/theme-section.css
@@ -70,7 +70,7 @@
 
 @media screen and (max-width: 600px) {
   .theme h1 {
-    font-size: 250%;
+    font-size: 265%;
     letter-spacing: -2px;
   }
 }
